tests/fail/invalid_self_path.stderr
error: path must start with 'self'
 --> tests/fail/invalid_self_path.rs:8:16
  |
8 |     #[decorate("invalid.path")] // Should fail - doesn't start with 'self'
  |                ^^^^^^^^^^^^^^
